--- a/EJERCITACIONES/UNIDAD2/index.html
+++ b/EJERCITACIONES/UNIDAD2/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./script/script.js" defer></script>
@@ -10,12 +12,10 @@
 </head>
 <body>
     <header id="header" class="header">
-        <div class="container">
-            <h1>Ejercicios Unidad 2</h1>
-        </div>        
+        <h1>Ejercicios Unidad 2</h1>            
     </header>
     <main>
-        <div class="container">
+        <div class="container-sm">
             <div class="calculator">
                 <label for="operand1">Operando 1:</label>
                 <input type="number" id="operand1" placeholder="Operando 1">
